# server-backend

./: .gitignore  Pipfile  README.md  __init__.py  db.json  forms.py  models.py  mongoengine test.ipynb  pyproject.toml  service.py  test notebook.ipynb
.ipynb_checkpoints/: mongoengine test-checkpoint.ipynb  test notebook-checkpoint.ipynb
app/: forms.py
