[tool.poetry]
name = "diseno-monterrey"
version = "0.1.0"
description = ""
authors = ["Leningrade <edgar@enmienda.co>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
mongoengine = "^0.18.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
